<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_your_trips"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/your_trips" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/my_locations" />
        <item
            android:id="@+id/nav_scanner"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/scann_receipts" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/log_out" />
    </group>
</menu>
